# internal/domain/entity/collection_name.go
@@ -1,0 +1,5 @@
+package entity
+
+var (
+	CollectionNotification = "notification"
+)
